# NoduLoCC2026

./: .gitignore  MIL_NOTES.md  NARVAL_SLURM_TUTORIAL.md  README.md  download_models.py  ensemble_b4_fast.slurm  exploration.py  leon-train-57443487.out  leon-train-57456381.out  leon-train-57504620.out  leon-train-57540508.out  pyproject.toml  requirements.txt  result.txt  setup_wandb.sh  submit_and_sync.sh  submit_leon.sh  sweep_threshold.slurm  train_gpu.slurm  train_gpu.slurm.example  train_job.sh  train_leon.slurm  train_transfer_learning.py  wandb_utils.py
configs/: base.yaml  classification.yaml  classification_2.yaml  classification_3.yaml  classification_4.yaml  classification_5.yaml  leon_b4_focal_team_v2.yaml  leon_xrv_nih_focal.yaml  leon_xrv_nih_mil.yaml  r1_b4_bce_posw.yaml  r1_b4_bce_posw_team_v2.yaml  r1_b4_bce_posw_team_v2_no_double_comp.yaml  r1_b4_mil_patch_team_v2.yaml  r2_b4_focal.yaml  r3_b4_bce_no_posw.yaml  r_final_b4_auc_select.yaml  r_final_b4_global_cxr_init.yaml  r_final_b4_global_deadline.yaml  r_last_b4_holdout_tune.yaml
docs/: CODEBASE_ANALYSIS.md
src/nodulocc/: __init__.py  cli.py  config.py  data.py  engine.py  ensemble.py  ensemble_csv.py  export_xrv_checkpoint.py  hpo.py  metrics.py  models.py  preprocess_profiles.py  preview_preprocessing.py  tracking.py
