[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nodulocc"
version = "0.1.0"
description = "Compact modular baseline for NoduLoCC 2026"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "PyYAML",
  "scikit-learn",
  "Pillow",
  "tqdm",
  "torch",
  "torchvision",
  "timm",
]

[project.optional-dependencies]
exp = ["wandb", "optuna"]

[project.scripts]
nodulocc = "nodulocc.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
